--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -120,6 +120,9 @@
     <script src="scripts/app/account/reset/finish/reset.finish.js"></script>
     <script src="scripts/app/account/reset/request/reset.request.controller.js"></script>
     <script src="scripts/app/account/reset/request/reset.request.js"></script>
+    <script src="scripts/app/find/find.js"></script>
+    <script src="scripts/app/find/users/users.js"></script>
+    <script src="scripts/app/find/users/users.controller.js"></script>
     <script src="scripts/app/admin/admin.js"></script>
     <script src="scripts/app/admin/audits/audits.js"></script>
     <script src="scripts/app/admin/audits/audits.controller.js"></script>
